<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.drunken.repositorylombaraion.viewModels.LombaDetailPageViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LombaDetailPage">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:contentScrim="@color/white"
                app:title="@string/lomba"
                app:collapsedTitleTextColor="@color/primaryColor"
                android:background="@color/white">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lomba_image_placeholder"
                    android:importantForAccessibility="no"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:background="@drawable/round_left_corner_bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/kelompok_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Himfest HIMFO Binus Malang"
                    android:text="@{viewModel.lomba.component2()}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginStart="26dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/penyelenggara_lomba_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="HIMFO Binus Malang"
                    android:text="@{viewModel.lomba.component5()}"
                    app:layout_constraintTop_toBottomOf="@id/kelompok_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/deskripsi_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    app:layout_constraintTop_toBottomOf="@id/penyelenggara_lomba_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/deskripsi_lomba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
                    android:text="@{viewModel.lomba.component3()}"
                    app:layout_constraintTop_toBottomOf="@id/deskripsi_lomba_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/kategori_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori"
                    app:layout_constraintTop_toBottomOf="@id/deskripsi_lomba"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/kategori_lomba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet"
                    android:text="@{viewModel.lomba.component6()}"
                    app:layout_constraintTop_toBottomOf="@id/kategori_lomba_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tanggal_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    app:layout_constraintTop_toBottomOf="@id/kategori_lomba"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

<!--                TODO: Implement binding adapter for date-->
                <TextView
                    android:id="@+id/tanggal_lomba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="25 Maret"
                    dateToText="@{viewModel.lomba.component4()}"
                    app:layout_constraintTop_toBottomOf="@id/tanggal_lomba_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/kategori_hadiah_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_hadiah"
                    app:layout_constraintTop_toBottomOf="@id/tanggal_lomba"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <RatingBar
                    android:id="@+id/kategori_hadiah_lomba"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="@{viewModel.lomba.component7()}"
                    app:layout_constraintTop_toBottomOf="@id/kategori_hadiah_lomba_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:isIndicator="true"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:id="@+id/status_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_lomba"
                    app:layout_constraintTop_toBottomOf="@id/kategori_hadiah_lomba"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/history_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alumni_lomba"
                    app:layout_constraintTop_toBottomOf="@id/status_lomba"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/status_lomba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Tutup"
                    statusLomba="@{viewModel.lomba.component9()}"
                    app:layout_constraintTop_toBottomOf="@id/status_lomba_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginTop="6dp"
                    android:textSize="16sp"/>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/history_lomba_title"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/history_lomba_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"/>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>