<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewmodel"
            type="com.drunken.repositorylombaraion.viewModels.HomepageViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".views.Homepage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="18dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="18dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="18dp" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"
                app:layout_constraintTop_toBottomOf="@id/topMargin"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintBottom_toBottomOf="@id/ivProfile"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                app:layout_constraintTop_toTopOf="@id/topMargin"
                android:src="@color/white" />

            <androidx.cardview.widget.CardView
                android:id="@+id/lombaCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                android:layout_marginTop="28dp"
                app:cardCornerRadius="14dp"
                android:onClick="@{() -> viewmodel.fetchAllLomba()}">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cv_shape_bg_wr"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_emoji_events_24"
                    android:scaleType="centerCrop"
                    android:rotation="10"
                    android:layout_marginTop="-10dp"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lomba"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lomba_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/kelompokCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/lombaCardView"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cv_shape_bg_rw"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_group_add_24"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="-10dp"
                    android:rotation="15"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buat_kelompok"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kelompok_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheetHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_background"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ImageView
                android:id="@+id/bottom_sheet_indicator"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:importantForAccessibility="no"
                android:src="@drawable/bottom_sheet_indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_indicator"
                android:text="@string/lomba" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomepage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/rv_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="8dp"/>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/fetchingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:indeterminate="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>