<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="kelompok"
            type="com.drunken.repositorylombaraion.models.Kelompok" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.KelompokDetailPage">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:contentScrim="@color/white"
                app:title="@string/detail_kelompok"
                app:collapsedTitleTextColor="@color/primaryColor"
                android:background="@color/white">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kelompok_image_placeholder"
                    android:importantForAccessibility="no"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:background="@drawable/round_left_corner_bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/kelompok_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Bibimbap"
                    android:text="@{kelompok.component2()}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginStart="26dp"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/list_anggota_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anggota"
                    app:layout_constraintTop_toBottomOf="@id/kelompok_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <HorizontalScrollView
                    android:id="@+id/list_anggota_sv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/list_anggota_title"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_anggota_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"/>

                </HorizontalScrollView>

                <TextView
                    android:id="@+id/list_lomba_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history_lomba"
                    app:layout_constraintTop_toBottomOf="@id/list_anggota_sv"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginTop="12dp"
                    android:textSize="18sp"/>

                <HorizontalScrollView
                    android:id="@+id/list_lomba_sv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/list_lomba_title"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_lomba_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"/>

                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>